--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "html": "^1.0.0",
     "mongodb": "^3.6.5",
+    "nunjucks": "^3.2.3",
     "ws": "^7.4.4"
   }
 }
